Cambios en la vista de competencia

--- a/Analisis/Competencia.html
+++ b/Analisis/Competencia.html
@@ -6,6 +6,13 @@
     <title>Análisis de mercado AccessGate</title>
     <link rel="stylesheet" href="../style.css">
     <link rel="shortcut icon" href='../Images/Favicon.png'>
+    <style>
+        .parallax{
+            padding: 1%;
+            padding-top: 20%;
+            padding-bottom: 20%;
+        }
+    </style>
 </head>
 <body>
     <div class="navbar">
@@ -29,7 +36,7 @@
         </div>
     </div>
     <div class="parallax">
-        <div class="content">
+        <div class="supercontent">
             <h1>Análisis de la competencia</h1>
             <p>Hicimos un análisis de la competencia para ver a qué nos enfrentamos.</p>
             <div class="table-container">
@@ -39,6 +46,7 @@
                             <th>Analisis</th>
                             <th>AccessGate</th>
                             <th>Salto Systems</th>
+                            <th>Grupo ASA S.A.</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -46,111 +54,133 @@
                             <td>Localización</td>
                             <td>Río Tercero-Cba</td>
                             <td>España</td>
+                            <td>Córdoba, Córdoba - Rosario, Santa Fe</td>
                         </tr>
                         <tr>
                             <td>Productos y servicios que ofrecen</td>
                             <td>Dispositivo AccessGate</td>
                             <td>SALTO KS (Keys as a Service)</td>
+                            <td>Productos PPA: automatizadores, alarmas, accesorios y repuestos</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>Pagina web de accessgate</td>
                             <td>SVN (Salto Virtual Network)</td>
+                            <td>Productos Induport: portones levadizos y componentes para su fabricación.</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td></td>
                             <td>Homelok</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td></td>
                             <td></td>
                             <td>XS4 Face: control de acceso por reconocimiento facial.</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td></td>
                             <td></td>
                             <td>XS4 Com: interfonía inteligente para edificios modernos</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>Precio de venta</td>
                             <td>USD 99</td>
                             <td>Varían según el producto pero aproximadamente es de 500 USD por unidad.</td>
+                            <td>ARS 900.000 hasta 2.000.000</td>
                         </tr>
                         <tr>
                             <td>Medios de pago</td>
                             <td>Paypal</td>
                             <td>Ofrecen diversas opciones como transferencia bancaria, tarjetas de crédito y otros métodos electrónicos.</td>
+                            <td>Mercado pago y ofrecen la posibilidad de pagar en cuotas con tarjeta.</td>
                         </tr>
                         <tr>
                             <td>Caracteristicas de la materia prima</td>
                             <td></td>
                             <td></td>
+                            <td>Utiliza materiales de alta calidad en la fabricación de sus productos.</td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>Su fábrica cuenta con talleres de corte y plegado y servicios de corte láser.</td>
                         </tr>
                         <tr>
                             <td>Tecnologias</td>
                             <td>RFID</td>
                             <td>Salto KS para el control de acceso basado en la nube.</td>
+                            <td>Emplea tecnología de punta en sus procesos de fabricación y automatización.</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>Wi-fi</td>
                             <td>XS4-Face para reconocimiento facial.</td>
+                            <td>La fábrica Induport está equipada con maquinaria moderna.</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td>Pagina web para verificar accesos.</td>
                             <td>XS4-Com para interfonía inteligente.</td>
+                            <td>Incluye corte láser y sistemas avanzados de control de calidad.</td>
                         </tr>
                         <tr>
                             <td></td>
                             <td></td>
                             <td>Data-On-Card para gestión de identidades.</td>
+                            <td></td>
                         </tr>
                         <tr>
                             <td>Marca</td>
                             <td>AccessGate</td>
                             <td>SALTO</td>
+                            <td>InduPort</td>
                         </tr>
                         <tr>
                             <td>Embalaje</td>
                             <td>-</td>
                             <td>Realiza embalajes diseñados para proteger los dispositivos durante el transporte y almacenamiento.</td>
-                        </tr>
-                        <tr>
-                            <td></td>
-                            <td></td>
-                            <td>El cual cuenta con un diseño funcional y profesional, reflejando la calidad de la marca.</td>
+                            <td>Es realizado con materiales adecuados para preservarlos durante el transporte.</td>
                         </tr>
                         <tr>
                             <td>Principales clientes</td>
                             <td>Empresas/Instituciones/Organizaciones</td>
                             <td>Residencial, escuelas, sanidad, entre otros</td>
+                            <td>Atiende una amplia red de distribuidores, instaladores y revendedores en todo el país.</td>
                         </tr>
                         <tr>
                             <td>Atencion al cliente</td>
                             <td>Por Tienda Web, Mail</td>
-                            <td>Por mail</td>
+                            <td>Ofrece soporte técnico y atención al cliente a través de su red de distribuidores autorizados y su plataforma en línea.</td>
+                            <td>Ofrece atención personalizada a través de sus sucursales en Córdoba y Rosario.</td>
                         </tr>
                         <tr>
                             <td>Cumplimiento de entrega</td>
                             <td>No hay registros de compra</td>
-                            <td>Muy buena</td>
+                            <td>Se compromete a cumplir con los plazos de entrega establecidos. Garantiza la disponibilidad de productos y la logística necesaria para su distribución.</td>
+                            <td>Se compromete a cumplir con los plazos de entrega establecidos. Y estos son respaldados por su red de distribución y logística propia.</td>
                         </tr>
                         <tr>
                             <td>Tipo de publicidad que realiza</td>
                             <td>Boca a boca</td>
-                            <td>Google ads, carteles publicitarios, etc</td>
+                            <td>Presencia en redes sociales, Participación en eventos del sector, Publicaciones en blogs especializados, Colaboraciones con distribuidores y partners, Página web, etc</td>
+                            <td>Utiliza plataformas digitales como Instagram para promocionar sus productos y ofertas.</td>
                         </tr>
                         <tr>
                             <td>Puntos Fuertes</td>
                             <td>Bajo coste, local, tecnologia rfid para acceder</td>
-                            <td>Confiabilidad, calidad, uso de datos biometricos, velocidad</td>
+                            <td>Innovación tecnológica constante, soluciones escalables y adaptables, presencia global con soporte local, compromiso con la sostenibilidad y la responsabilidad social.</td>
+                            <td>Amplia trayectoria en el mercado argentino, Productos de alta calidad y tecnología avanzada,Capacitación continua para distribuidores e instaladores, Red de distribución y soporte técnico en todo el país.</td>
                         </tr>
                         <tr>
                             <td>Puntos Debiles</td>
                             <td>Proyecto en fase de desarrollo, propenso a errores, pagina web lenta debido a que esta alojada en Canada</td>
-                            <td>Costoso, no disponible oficialmente en el país, propenso a hackeos debido a que es mas conocido, no tienen una opcion de porton automatico</td>
+                            <td>Precios superiores a los de competidores locales en algunos mercados, no tienen opcion de porton automatico, extranjera.</td>
+                            <td>Información limitada sobre precios y medios de pago en su sitio web, Ausencia de detalles específicos sobre garantías y políticas de devolución, no tienen pagina web de gestion de acceso,</td>
                         </tr>
                     </tbody>
                 </table>
@@ -161,7 +191,8 @@
                     La diferencia mas notoria es que solo AccessGate ofrece un servicio de portones automaticos con RFID, Mayormente para empresas/organizaciones/instituciones ya que para el hogar nos ganarian con los clasicos portones a control remoto. <br>
                     Otra de las diferencias es el bajo costo del dispositivo Accessgate y su barata escalabilidad. Nosotros creemos que los clientes nos eligiran a nosotros debido al bajo precio, lo innovadora que es la idea y la seguridad que damos. <br>
                     En cuanto a caracteristicas, nuestro producto cuenta con la tecnologia RFID para que los datos de la persona queden registrados en cuanto la persona acceda con la tarjeta. Otra caracteristica es la facil configuración una vez que adquieres el producto. <br>
-                    Los beneficios que traera es la seguridad y la confiabilidad en su porton automatizado, ya quelos portones automaticos comunes pueden ser facilmente vulnerados con las nuevas tecnologias sin dejar rastros
+                    Los beneficios que traera es la seguridad y la confiabilidad en su porton automatizado, ya quelos portones automaticos comunes pueden ser facilmente vulnerados con las nuevas tecnologias sin dejar rastros. <br>
+                    Segun el analisis de competencia, somos la opcion mas eficaz para el problema que solucionamos
                 </h4>
             </div>
         </div>
