Corrección de errores ortograficos

--- a/Analisis/Competencia.html
+++ b/Analisis/Competencia.html
@@ -43,7 +43,7 @@
                 <table>
                     <thead>
                         <tr>
-                            <th>Analisis</th>
+                            <th>Análisis</th>
                             <th>AccessGate</th>
                             <th>Salto Systems</th>
                             <th>Grupo ASA S.A.</th>
@@ -64,7 +64,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>Pagina web de accessgate</td>
+                            <td>Página web de AccessGate</td>
                             <td>SVN (Salto Virtual Network)</td>
                             <td>Productos Induport: portones levadizos y componentes para su fabricación.</td>
                         </tr>
@@ -99,7 +99,7 @@
                             <td>Mercado pago y ofrecen la posibilidad de pagar en cuotas con tarjeta.</td>
                         </tr>
                         <tr>
-                            <td>Caracteristicas de la materia prima</td>
+                            <td>Características de la materia prima</td>
                             <td></td>
                             <td></td>
                             <td>Utiliza materiales de alta calidad en la fabricación de sus productos.</td>
@@ -111,7 +111,7 @@
                             <td>Su fábrica cuenta con talleres de corte y plegado y servicios de corte láser.</td>
                         </tr>
                         <tr>
-                            <td>Tecnologias</td>
+                            <td>Tecnologías</td>
                             <td>RFID</td>
                             <td>Salto KS para el control de acceso basado en la nube.</td>
                             <td>Emplea tecnología de punta en sus procesos de fabricación y automatización.</td>
@@ -124,7 +124,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>Pagina web para verificar accesos.</td>
+                            <td>Página web para verificar accesos.</td>
                             <td>XS4-Com para interfonía inteligente.</td>
                             <td>Incluye corte láser y sistemas avanzados de control de calidad.</td>
                         </tr>
@@ -153,7 +153,7 @@
                             <td>Atiende una amplia red de distribuidores, instaladores y revendedores en todo el país.</td>
                         </tr>
                         <tr>
-                            <td>Atencion al cliente</td>
+                            <td>Atención al cliente</td>
                             <td>Por Tienda Web, Mail</td>
                             <td>Ofrece soporte técnico y atención al cliente a través de su red de distribuidores autorizados y su plataforma en línea.</td>
                             <td>Ofrece atención personalizada a través de sus sucursales en Córdoba y Rosario.</td>
@@ -172,15 +172,15 @@
                         </tr>
                         <tr>
                             <td>Puntos Fuertes</td>
-                            <td>Bajo coste, local, tecnologia rfid para acceder</td>
+                            <td>Bajo coste, local, tecnología RFID para acceder</td>
                             <td>Innovación tecnológica constante, soluciones escalables y adaptables, presencia global con soporte local, compromiso con la sostenibilidad y la responsabilidad social.</td>
-                            <td>Amplia trayectoria en el mercado argentino, Productos de alta calidad y tecnología avanzada,Capacitación continua para distribuidores e instaladores, Red de distribución y soporte técnico en todo el país.</td>
+                            <td>Amplia trayectoria en el mercado argentino, Productos de alta calidad y tecnología avanzada, Capacitación continua para distribuidores e instaladores, Red de distribución y soporte técnico en todo el país.</td>
                         </tr>
                         <tr>
-                            <td>Puntos Debiles</td>
-                            <td>Proyecto en fase de desarrollo, propenso a errores, pagina web lenta debido a que esta alojada en Canada</td>
-                            <td>Precios superiores a los de competidores locales en algunos mercados, no tienen opcion de porton automatico, extranjera.</td>
-                            <td>Información limitada sobre precios y medios de pago en su sitio web, Ausencia de detalles específicos sobre garantías y políticas de devolución, no tienen pagina web de gestion de acceso,</td>
+                            <td>Puntos Débiles</td>
+                            <td>Proyecto en fase de desarrollo, propenso a errores, página web lenta debido a que está alojada en Canadá</td>
+                            <td>Precios superiores a los de competidores locales en algunos mercados, no tienen opción de portón automático, extranjera.</td>
+                            <td>Información limitada sobre precios y medios de pago en su sitio web, Ausencia de detalles específicos sobre garantías y políticas de devolución, no tienen página web de gestión de acceso,</td>
                         </tr>
                     </tbody>
                 </table>
@@ -188,11 +188,11 @@
             <h2>Conclusión</h2>
             <div class="market-analysis-sections">
                 <h4>
-                    La diferencia mas notoria es que solo AccessGate ofrece un servicio de portones automaticos con RFID, Mayormente para empresas/organizaciones/instituciones ya que para el hogar nos ganarian con los clasicos portones a control remoto. <br>
-                    Otra de las diferencias es el bajo costo del dispositivo Accessgate y su barata escalabilidad. Nosotros creemos que los clientes nos eligiran a nosotros debido al bajo precio, lo innovadora que es la idea y la seguridad que damos. <br>
-                    En cuanto a caracteristicas, nuestro producto cuenta con la tecnologia RFID para que los datos de la persona queden registrados en cuanto la persona acceda con la tarjeta. Otra caracteristica es la facil configuración una vez que adquieres el producto. <br>
-                    Los beneficios que traera es la seguridad y la confiabilidad en su porton automatizado, ya quelos portones automaticos comunes pueden ser facilmente vulnerados con las nuevas tecnologias sin dejar rastros. <br>
-                    Segun el analisis de competencia, somos la opcion mas eficaz para el problema que solucionamos
+                    La diferencia más notoria es que solo AccessGate ofrece un servicio de portones automáticos con RFID, mayormente para empresas/organizaciones/instituciones ya que para el hogar nos ganarían con los clásicos portones a control remoto. <br>
+                    Otra de las diferencias es el bajo costo del dispositivo AccessGate y su barata escalabilidad. Nosotros creemos que los clientes nos elegirán a nosotros debido al bajo precio, lo innovadora que es la idea y la seguridad que damos. <br>
+                    En cuanto a características, nuestro producto cuenta con la tecnología RFID para que los datos de la persona queden registrados en cuanto acceda con la tarjeta. Otra característica es la fácil configuración una vez que adquieres el producto. <br>
+                    Los beneficios que traerá es la seguridad y la confiabilidad en su portón automatizado, ya que los portones automáticos comunes pueden ser fácilmente vulnerados con las nuevas tecnologías sin dejar rastros. <br>
+                    Según el análisis de competencia, somos la opción más eficaz para el problema que solucionamos.
                 </h4>
             </div>
         </div>
