--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <div class="parallax">
         <div class="content">
             <img class="logo" src="Images/Favicon.png"><br>
+            <h2>Más que un portón</h2><br>
             <div class="card">
                 <p class="card-title">
                     Nos complace ofrecerte una solución eficiente y segura para controlar el acceso a tu empresa.
