--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
         <div class="content">
             <img class="logo" src="Images/Favicon.png"><br>
             <h2>Más que un portón</h2><br>
+            <h3>Nuestra mision</h3>
+            <p>Crear dispositivos con tecnología RFID, motores y sensores que aseguren portones automáticos.</p>
+            <h3>Nuestra vision</h3>
+            <p>Expandirse en el país y llegar a ser líderes nacionales en seguridad de portones.</p>
             <div class="card">
                 <p class="card-title">
                     Nos complace ofrecerte una solución eficiente y segura para controlar el acceso a tu empresa.
