Falta video y tarjeta stefano

--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                 Aquí podrás ver los estudios de mercado de Accessgate.
                 </p>
             </div>
+            <button class="cta">
+                <span class="hover-underline-animation"><a class="button" href="./Imagencorporativa.html">Imagen Corporativa</a></span>
+            </button>
         </div>
     </div>
     <div id="modal-confirmacion" class="modal">
