--- a/Imagencorporativa.html
+++ b/Imagencorporativa.html
@@ -39,16 +39,19 @@
             <img src="./Images/BannerFisico.png" class="imgbanner" alt="Banner Físico">
             <h2>Tarjeta personal</h2><br>
             <h3>Leonardo Gottero</h3>
-            <div class="tarjeta">
-
-            </div>
             <img src="./Images/TLFrente.png" class="imgtar" alt="Frente de tarjeta de Leonardo Gottero">
             <img src="./Images/TLDorso.png" class="imgtar" alt="Dorso de tarjeta de Leonardo Gottero">
             <h3>Stéfano Sandrone</h3>
+            <img src="./Images/TSFrente.png" class="imgtar" alt="Frente de tarjeta de Stéfano Sandrone">
+            <img src="./Images/TSDorso.png" class="imgtar" alt="Dorso de tarjeta de Stéfano Sandrone">
             <h2>Avisos publicitarios para redes sociales</h2>
             <h3>Imagen</h3>
             <img src="./Images/RRSS.png" class="imgrrss" alt="Avisos publicitarios para redes sociales">
             <h3>Video</h3>
+            <video class="vid" controls>
+                <source src="./Videos/Video_publicitario.mp4" type="video/mp4">
+                Tu navegador no soporta la reproducción de videos.
+            </video>
         </div>
     </div>
     <div id="modal-confirmacion" class="modal">
