--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Análisis</a></li></div>
+            <div class="button"><li><a href="./Imagencorporativa.html">Imagen Corporativa</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
             <div class="button"><li id="gestion-button"><a href="">Página Oficial</a></li></div>
@@ -23,6 +24,7 @@
             <div class="dropdown-content">
                 <a href="./index.html">Inicio</a>
                 <a href="./Analisis.html">Análisis</a>
+                <a href="./Imagencorporativa.html">Imagen Corporativa</a>
                 <a href="./Logo.html">Nuestro logo</a>
                 <a href="./Tecnologias.html">Tecnologías</a>
                 <a href="https://accessgate.onrender.com/">Página Oficial</a>
@@ -57,9 +59,6 @@
                 Aquí podrás ver los estudios de mercado de Accessgate.
                 </p>
             </div>
-            <button class="cta">
-                <span class="hover-underline-animation"><a class="button" href="./Imagencorporativa.html">Imagen Corporativa</a></span>
-            </button>
         </div>
     </div>
     <div id="modal-confirmacion" class="modal">
