--- a/Tecnologias.html
+++ b/Tecnologias.html
@@ -13,6 +13,7 @@
         <div class="nav-links">
             <div class="button"><li><a href="./index.html">Inicio</a></li></div>
             <div class="button"><li><a href="./Analisis.html">Análisis</a></li></div>
+            <div class="button"><li><a href="./Imagencorporativa.html">Imagen Corporativa</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
             <div class="button"><li id="gestion-button"><a href="">Página Oficial</a></li></div>
@@ -22,6 +23,7 @@
             <div class="dropdown-content">
                 <a href="./index.html">Inicio</a>
                 <a href="./Analisis.html">Análisis</a>
+                <a href="./Imagencorporativa.html">Imagen Corporativa</a>
                 <a href="./Logo.html">Nuestro logo</a>
                 <a href="./Tecnologias.html">Tecnologías</a>
                 <a href="https://accessgate.onrender.com/">Página Oficial</a>
