--- a/Analisis/Mercado.html
+++ b/Analisis/Mercado.html
@@ -9,21 +9,23 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="../Images/Favicon.png">
+        <img src="Images/Favicon.png">
         <div class="nav-links">
-            <div class="button"><li><a href="../index.html">Inicio</a></li></div>
-            <div class="button"><li><a href="../Analisis.html">Análisis</a></li></div>
-            <div class="button"><li><a href="../Logo.html">Nuestro logo</a></li></div>
-            <div class="button"><li><a href="../Tecnologias.html">Tecnologías</a></li></div>
+            <div class="button"><li><a href="./index.html">Inicio</a></li></div>
+            <div class="button"><li><a href="./Analisis.html">Análisis</a></li></div>
+            <div class="button"><li><a href="./Imagencorporativa.html">Imagen Corporativa</a></li></div>
+            <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
+            <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
             <div class="button"><li id="gestion-button"><a href="">Página Oficial</a></li></div>
         </div>
         <div class="dropdown-menu-toggle">
             <button class="menu-button">☰</button>
             <div class="dropdown-content">
-                <a href="../index.html">Inicio</a>
-                <a href="../Analisis.html">Análisis</a>
-                <a href="../Logo.html">Nuestro logo</a>
-                <a href="../Tecnologias.html">Tecnologías</a>
+                <a href="./index.html">Inicio</a>
+                <a href="./Analisis.html">Análisis</a>
+                <a href="./Imagencorporativa.html">Imagen Corporativa</a>
+                <a href="./Logo.html">Nuestro logo</a>
+                <a href="./Tecnologias.html">Tecnologías</a>
                 <a href="https://accessgate.onrender.com/">Página Oficial</a>
             </div>
         </div>
