--- a/Analisis/Mercado.html
+++ b/Analisis/Mercado.html
@@ -11,8 +11,8 @@
     <div class="navbar">
         <img src="Images/Favicon.png">
         <div class="nav-links">
-            <div class="button"><li><a href="./index.html">Inicio</a></li></div>
-            <div class="button"><li><a href="./Analisis.html">Análisis</a></li></div>
+            <div class="button"><li><a href="././index.html">Inicio</a></li></div>
+            <div class="button"><li><a href="././Analisis.html">Análisis</a></li></div>
             <div class="button"><li><a href="./Imagencorporativa.html">Imagen Corporativa</a></li></div>
             <div class="button"><li><a href="./Logo.html">Nuestro logo</a></li></div>
             <div class="button"><li><a href="./Tecnologias.html">Tecnologías</a></li></div>
