--- a/Analisis/Mercado.html
+++ b/Analisis/Mercado.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="navbar">
-        <img src="Images/Favicon.png">
+        <img src="../Images/Favicon.png">
         <div class="nav-links">
             <div class="button"><li><a href="../index.html">Inicio</a></li></div>
             <div class="button"><li><a href="../Analisis.html">Análisis</a></li></div>
