Errores de ortografia

--- a/Analisis/Competencia.html
+++ b/Analisis/Competencia.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -54,7 +54,7 @@
                     <tbody>
                         <tr>
                             <td>Localización</td>
-                            <td>Río Tercero-Cba</td>
+                            <td>Río Tercero, Córdoba</td>
                             <td>España</td>
                             <td>Córdoba, Córdoba - Rosario, Santa Fe</td>
                         </tr>
@@ -62,7 +62,7 @@
                             <td>Productos y servicios que ofrecen</td>
                             <td>Dispositivo AccessGate</td>
                             <td>SALTO KS (Keys as a Service)</td>
-                            <td>Productos PPA: automatizadores, alarmas, accesorios y repuestos</td>
+                            <td>Productos PPA: automatizadores, alarmas, accesorios y repuestos.</td>
                         </tr>
                         <tr>
                             <td></td>
@@ -85,20 +85,20 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>XS4 Com: interfonía inteligente para edificios modernos</td>
+                            <td>XS4 Com: interfonía inteligente para edificios modernos.</td>
                             <td></td>
                         </tr>
                         <tr>
                             <td>Precio de venta</td>
                             <td>USD 99</td>
-                            <td>Varían según el producto pero aproximadamente es de 500 USD por unidad.</td>
+                            <td>Varían según el producto, pero es de aproximadamente 500 USD por unidad.</td>
                             <td>ARS 900.000 hasta 2.000.000</td>
                         </tr>
                         <tr>
                             <td>Medios de pago</td>
-                            <td>Paypal</td>
+                            <td>PayPal</td>
                             <td>Ofrecen diversas opciones como transferencia bancaria, tarjetas de crédito y otros métodos electrónicos.</td>
-                            <td>Mercado pago y ofrecen la posibilidad de pagar en cuotas con tarjeta.</td>
+                            <td>Mercado Pago y ofrecen la posibilidad de pagar en cuotas con tarjeta.</td>
                         </tr>
                         <tr>
                             <td>Características de la materia prima</td>
@@ -110,7 +110,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                            <td>Su fábrica cuenta con talleres de corte y plegado y servicios de corte láser.</td>
+                            <td>Su fábrica cuenta con talleres de corte, plegado y servicios de corte láser.</td>
                         </tr>
                         <tr>
                             <td>Tecnologías</td>
@@ -120,7 +120,7 @@
                         </tr>
                         <tr>
                             <td></td>
-                            <td>Wi-fi</td>
+                            <td>Wi-Fi</td>
                             <td>XS4-Face para reconocimiento facial.</td>
                             <td>La fábrica Induport está equipada con maquinaria moderna.</td>
                         </tr>
@@ -150,39 +150,39 @@
                         </tr>
                         <tr>
                             <td>Principales clientes</td>
-                            <td>Empresas/Instituciones/Organizaciones</td>
-                            <td>Residencial, escuelas, sanidad, entre otros</td>
-                            <td>Atiende una amplia red de distribuidores, instaladores y revendedores en todo el país.</td>
+                            <td>Empresas, instituciones u organizaciones</td>
+                            <td>Sector residencial, escuelas, sanidad, entre otros.</td>
+                            <td>Atiende a una amplia red de distribuidores, instaladores y revendedores en todo el país.</td>
                         </tr>
                         <tr>
                             <td>Atención al cliente</td>
-                            <td>Por Tienda Web, Mail</td>
+                            <td>Por tienda web o correo electrónico</td>
                             <td>Ofrece soporte técnico y atención al cliente a través de su red de distribuidores autorizados y su plataforma en línea.</td>
                             <td>Ofrece atención personalizada a través de sus sucursales en Córdoba y Rosario.</td>
                         </tr>
                         <tr>
                             <td>Cumplimiento de entrega</td>
-                            <td>No hay registros de compra</td>
+                            <td>No hay registros de compra.</td>
                             <td>Se compromete a cumplir con los plazos de entrega establecidos. Garantiza la disponibilidad de productos y la logística necesaria para su distribución.</td>
-                            <td>Se compromete a cumplir con los plazos de entrega establecidos. Y estos son respaldados por su red de distribución y logística propia.</td>
+                            <td>Se compromete a cumplir con los plazos de entrega establecidos, respaldados por su red de distribución y logística propia.</td>
                         </tr>
                         <tr>
                             <td>Tipo de publicidad que realiza</td>
                             <td>Boca a boca</td>
-                            <td>Presencia en redes sociales, Participación en eventos del sector, Publicaciones en blogs especializados, Colaboraciones con distribuidores y partners, Página web, etc</td>
+                            <td>Presencia en redes sociales, participación en eventos del sector, publicaciones en blogs especializados, colaboraciones con distribuidores y socios, página web, etc.</td>
                             <td>Utiliza plataformas digitales como Instagram para promocionar sus productos y ofertas.</td>
                         </tr>
                         <tr>
                             <td>Puntos Fuertes</td>
-                            <td>Bajo coste, local, tecnología RFID para acceder</td>
+                            <td>Bajo costo, local, tecnología RFID para acceder.</td>
                             <td>Innovación tecnológica constante, soluciones escalables y adaptables, presencia global con soporte local, compromiso con la sostenibilidad y la responsabilidad social.</td>
-                            <td>Amplia trayectoria en el mercado argentino, Productos de alta calidad y tecnología avanzada, Capacitación continua para distribuidores e instaladores, Red de distribución y soporte técnico en todo el país.</td>
+                            <td>Amplia trayectoria en el mercado argentino, productos de alta calidad y tecnología avanzada, capacitación continua para distribuidores e instaladores, red de distribución y soporte técnico en todo el país.</td>
                         </tr>
                         <tr>
                             <td>Puntos Débiles</td>
-                            <td>Proyecto en fase de desarrollo, propenso a errores, página web lenta debido a que está alojada en Canadá</td>
-                            <td>Precios superiores a los de competidores locales en algunos mercados, no tienen opción de portón automático, extranjera.</td>
-                            <td>Información limitada sobre precios y medios de pago en su sitio web, Ausencia de detalles específicos sobre garantías y políticas de devolución, no tienen página web de gestión de acceso,</td>
+                            <td>Proyecto en fase de desarrollo, propenso a errores, página web lenta debido a que está alojada en Canadá.</td>
+                            <td>Precios superiores a los de competidores locales en algunos mercados, no tienen opción de portón automático, es una empresa extranjera.</td>
+                            <td>Información limitada sobre precios y medios de pago en su sitio web, ausencia de detalles específicos sobre garantías y políticas de devolución, no tienen página web de gestión de acceso.</td>
                         </tr>
                     </tbody>
                 </table>
@@ -190,10 +190,10 @@
             <h2>Conclusión</h2>
             <div class="market-analysis-sections">
                 <h4>
-                    La diferencia más notoria es que solo AccessGate ofrece un servicio de portones automáticos con RFID, mayormente para empresas/organizaciones/instituciones ya que para el hogar nos ganarían con los clásicos portones a control remoto. <br>
-                    Otra de las diferencias es el bajo costo del dispositivo AccessGate y su barata escalabilidad. Nosotros creemos que los clientes nos elegirán a nosotros debido al bajo precio, lo innovadora que es la idea y la seguridad que damos. <br>
-                    En cuanto a características, nuestro producto cuenta con la tecnología RFID para que los datos de la persona queden registrados en cuanto acceda con la tarjeta. Otra característica es la fácil configuración una vez que adquieres el producto. <br>
-                    Los beneficios que traerá es la seguridad y la confiabilidad en su portón automatizado, ya que los portones automáticos comunes pueden ser fácilmente vulnerados con las nuevas tecnologías sin dejar rastros. <br>
+                    La diferencia más notoria es que solo AccessGate ofrece un servicio de portones automáticos con RFID, mayormente para empresas, organizaciones o instituciones, ya que para el hogar competirían con los clásicos portones a control remoto. <br>
+                    Otra de las diferencias es el bajo costo del dispositivo AccessGate y su económica escalabilidad. Nosotros creemos que los clientes nos elegirán debido al bajo precio, lo innovadora que es la idea y la seguridad que ofrecemos. <br>
+                    En cuanto a características, nuestro producto cuenta con la tecnología RFID para que los datos de la persona queden registrados al momento de acceder con la tarjeta. Otra característica es la fácil configuración una vez que se adquiere el producto. <br>
+                    Los beneficios que traerá son la seguridad y la confiabilidad en su portón automatizado, ya que los portones automáticos comunes pueden ser fácilmente vulnerados con las nuevas tecnologías sin dejar rastro. <br>
                     Según el análisis de competencia, somos la opción más eficaz para el problema que solucionamos.
                 </h4>
             </div>
