--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <div class="content">
             <img class="logo" src="Images/Favicon.png"><br>
             <h2>Más que un portón</h2><br>
-            <h3>Nuestra mision</h3>
+            <h3>Nuestra misión</h3>
             <p>Crear dispositivos con tecnología RFID, motores y sensores que aseguren portones automáticos.</p>
-            <h3>Nuestra vision</h3>
+            <h3>Nuestra visión</h3>
             <p>Expandirse en el país y llegar a ser líderes nacionales en seguridad de portones.</p>
             <div class="card">
                 <p class="card-title">
